fix bootstrap pages z-index

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,14 @@
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px 'Artistry', sans-serif;
   background-color: rgb(239, 243, 199);
+}
+
+p {
+  font-family: Arial, Helvetica, sans-serif
+}
+
+#welcome {
+  font-family: 'Zeus-Land', sans-serif;
 }
 
 .home-text {
@@ -23,11 +31,17 @@ body {
 
 .carousel-title {
   font-size: 40px;
+  font-family: 'Zeus-Land', sans-serif;
+  color: #FFFFE0;
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.form-control {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -36,6 +50,7 @@ body {
   top: 0;
   width: 100%;
   overflow: hidden;
+  z-index: 100;
 }
 
 a {
@@ -80,8 +95,6 @@ h4 {
   border: none;
 }
 
-/* Common styles for all screen sizes */
-
 
 .curiosities,
 .profile-curiosities {
@@ -93,6 +106,7 @@ h4 {
 .category-class {
   font-size: 50px;
   text-align: center;
+  font-family: 'Zeus-Land', sans-serif;
 }
 
 .curiosity-title {
